[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Acutapugione <acuta.pugione@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"

[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
